# KinectFusion

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  Dockerfile  README.md  compose.yaml  environment.yml
cmake/: CompilerWarnings.cmake  Hardening.cmake  Linker.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
configs/: ablate_all.toml  ablate_icp.toml  ablation_example.toml
include/kinectfusion/: block_rep.cuh  block_rep.hpp  comparison.hpp  cuda_compat.hpp  depth_processing.cuh  depth_processing.hpp  device_volume.cuh  empty_space_skip.hpp  grid.hpp  icp_correspondence.hpp  icp_optimizer.hpp  marching_cubes.hpp  occupancy.cuh  occupancy.hpp  pipeline.hpp  pipeline_set.hpp  projective_icp.hpp  raycasting.cuh  raycasting.hpp  registered_storages.hpp  rgbd.hpp  sample_library.hpp  trilinear.hpp  tsdf_integration.cuh  tsdf_integration.hpp  util.hpp  validation.hpp  vector.hpp  view.hpp  virtual_sensor.hpp  volume.hpp  volume_representation.hpp  volume_sampler.hpp
include/kinectfusion/cuda/: check.cuh  device_buffer.cuh  launch.cuh  pinned_buffer.cuh
include/kinectfusion/image_proc/: device_image.cuh  file.hpp  image.hpp  read_png.hpp  util.hpp  write_png.hpp
scripts/: evaluate_ate.py  fetch_tum_freiburg1_xyz.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_options.cpp  app_options.hpp  frame_output.cpp  frame_output.hpp  logging.hpp  main.cpp  pipeline_config.cpp  pipeline_config.hpp  reconstruction.cpp  reconstruction.hpp  trajectory_eval.cpp  trajectory_eval.hpp
src/kinectfusion/: CMakeLists.txt  comparison.cpp  cuda_util.cuh  depth_processing.cpp  depth_processing.cu  depth_processing_common.hpp  icp_optimizer.cpp  marching_cubes.cpp  pipeline.cpp  pipeline_set.cpp  projective_icp.cpp  raycasting.cpp  sample_library.cpp  tsdf_integration.cpp  virtual_sensor.cpp  volume.cpp
src/kinectfusion/cuda/: band_walk.cuh  block_rep.cu  depth_processing.cu  device_pipeline.cu  device_volume.cu  icp_correspondence.cu  occupancy.cu  raycasting.cu  tsdf_integration.cu
src/kinectfusion/image_proc/: CMakeLists.txt  read_png.cpp  write_png.cpp
src/lib/: CMakeLists.txt
test/: .clang-tidy  CMakeLists.txt  app_config_tests.cpp  constexpr_tests.cpp  cuda_depth_processing_tests.cu  cuda_type_assertions.cu  cxx20_shared_headers.cpp  tests.cpp  type_assertions.cpp
test/cmake/: test_sanitizers_apple_excludes_leak.cmake  test_sanitizers_non_apple_includes_leak.cmake
